--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "jest": "^30.2.0",
